<resources>
    <string name="app_name">Mayalu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="didnt_received_a_code">Didn\'t received a code.</string>
    <string name="don_t_have_an_account">Don\'t have an account.</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_to_nmayalu">Welcome to\nMayalu</string>
    <string name="app_icon">App Icon</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="continue_btn">Continue</string>
    <string name="new_password">New Password</string>
    <string name="resend">Resend</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="verify_mail">VERIFY MAIL</string>
    <string name="continue_text">Continue</string>
</resources>