<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginRequest"
            type="com.np.suprimpoudel.mayalu.features.shared.model.request.LoginRequest" />
    </data>

    <LinearLayout
        android:id="@+id/fragmentLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="16dp"
        tools:context="com.np.suprimpoudel.mayalu.features.ui.fragments.auth.LoginFragment">

        <include layout="@layout/include_app_icon" />

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/welcome_to_nmayalu"
            android:textColor="#222"
            android:textSize="26sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tIlEmailLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={loginRequest.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tIlPasswordLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={loginRequest.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtForgetPasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:text="@string/forget_password"
            android:textColor="#F58220" />

        <include
            android:id="@+id/btnLogin"
            layout="@layout/item_progress_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="14dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account" />

            <TextView
                android:id="@+id/txtSignUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/sign_up"
                android:textColor="#F58220" />
        </LinearLayout>
    </LinearLayout>
</layout>