<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/fragmentResetPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="18dp"
        android:orientation="vertical"
        tools:context="com.np.suprimpoudel.mayalu.features.ui.fragments.auth.ResetPasswordFragment">

        <ImageView
            android:id="@+id/imgBackIconForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:contentDescription="@string/back_arrow"
            android:padding="18dp"
            app:srcCompat="@drawable/ic_back" />

        <include layout="@layout/include_app_icon" />

        <TextView
            android:id="@+id/txtEnterEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="24dp"
            android:layout_marginTop="87dp"
            android:text="@string/enter_your_email_address"
            android:textColor="?colorOnPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmailReset"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailReset"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/btnResetPassword"
            layout="@layout/item_progress_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:text="@string/continue_btn" />

    </LinearLayout>
</layout>