<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signUpRequest"
            type="com.np.suprimpoudel.mayalu.features.shared.model.request.LoginRequest" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentSignUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.np.suprimpoudel.mayalu.features.ui.fragments.auth.SignUpFragment">

        <ImageView
            android:id="@+id/imvBackIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/back_arrow"
            android:padding="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_up"
            android:textColor="#555"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/imvBackIcon"
            app:layout_constraintStart_toEndOf="@id/imvBackIcon"
            app:layout_constraintTop_toTopOf="@id/imvBackIcon" />

        <include
            android:id="@+id/imvAppIcon"
            layout="@layout/include_app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imvBackIcon" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imvAppIcon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:text="@={signUpRequest.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordSignUp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:text="@={signUpRequest.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/btnSignUp"
            layout="@layout/item_progress_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="21dp"
            android:layout_marginTop="22dp"
            android:text="@string/continue_btn"
            app:layout_constraintTop_toBottomOf="@id/tilPasswordSignUp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12sp"
                android:text="@string/already_have_an_account" />

            <TextView
                android:id="@+id/txvLoginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#F58220" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>