<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <LinearLayout
        android:id="@+id/fragmentOTPEnter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.np.suprimpoudel.mayalu.features.ui.fragments.auth.OTPEnterFragment">

        <ImageView
            android:id="@+id/imgBackIconResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:contentDescription="@string/back_arrow"
            android:padding="18dp"
            app:srcCompat="@drawable/ic_back" />

        <include layout="@layout/include_app_icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="87dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/enter_verification_code"
            android:textColor="#222"
            android:textSize="20sp" />

        <com.chaos.view.PinView
            android:id="@+id/pinViewResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="21dp"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:textColor="#555"
            android:textSize="16sp"
            app:itemCount="6"
            app:itemHeight="44dp"
            app:itemRadius="5dp"
            app:itemSpacing="8dp"
            app:itemWidth="44dp"
            app:lineColor="@color/colorPrimary"
            app:lineWidth="1dp" />

        <include
            android:id="@+id/btnContinueResetPassword"
            layout="@layout/item_progress_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="19dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pinViewResetPassword" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/didnt_received_a_code"
                android:textColor="#555" />

            <TextView
                android:id="@+id/txtResendMailButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend"
                android:textColor="#F58220" />
        </LinearLayout>

    </LinearLayout>
</layout>